--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,14 +4,14 @@
   "description": "Seedance 前端应用",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon.png",
+      "sizes": "any",
+      "type": "image/png"
     },
     {
-      "src": "logo192.ico",
-      "type": "image/x-icon",
-      "sizes": "192x192",
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "any",
       "purpose": "any maskable"
     }
   ],
