--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "react-icons": "^5.4.0",
     "react-intl": "^7.1.6",
     "react-is": "^18.3.1",
-    "react-masonry-css": "^1.0.16",
     "react-markdown": "^10.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-middle-truncate": "^1.0.3",
     "react-modal": "^3.15.0",
     "react-redux": "^9.2.0",
@@ -68,6 +68,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "CI=false yarn build && netlify deploy --prod --dir=build"
@@ -104,6 +105,21 @@
       "preset": "styled-components"
     }
   },
+  "reactSnap": {
+    "source": "build",
+    "include": [
+      "/",
+      "/login",
+      "/signup",
+      "/help",
+      "/feedback",
+      "/terms-of-service",
+      "/privacy-policy",
+      "/recharge-agreement"
+    ],
+    "skipThirdPartyRequests": true,
+    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"]
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-react-jsx": "^7.25.9",
@@ -112,7 +128,8 @@
     "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "react-snap": "^1.23.0"
   },
   "overrides": {
     "react-is": "^18.3.1",
