--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-github-btn": "^1.4.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
@@ -118,7 +119,10 @@
       "/recharge-agreement"
     ],
     "skipThirdPartyRequests": true,
-    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"]
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ]
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
